--- a/css/styles.css
+++ b/css/styles.css
@@ -54,28 +54,11 @@
   --bs-body-bg: #fff;
 }
 
-
-
-
 .true-colors {
     background-image: linear-gradient(to right, purple, blue, green, orange, red);
   background-clip: text;
   -webkit-background-clip: text;
-
-  /* Adicionado: */
   -webkit-text-fill-color: transparent;
-  /* display: inline-block;
-  background: linear-gradient(90deg,
-  blue 20%,
-  green 20%, green 40%,
-  red 40%, red 60%,
-  orange 60%, orange 80%,
-  purple 80%
-   );
-  -webkit-text-fill-color: transparent;
-	background-clip: text;
-	-webkit-background-clip: text;
-	color: transparent; */
 }
 
 *,
@@ -173,14 +156,6 @@ p {
   margin-bottom: 1rem;
 }
 
-abbr[title],
-abbr[data-bs-original-title] {
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  cursor: help;
-  -webkit-text-decoration-skip-ink: none;
-          text-decoration-skip-ink: none;
-}
 
 address {
   margin-bottom: 1rem;
@@ -258,6 +233,10 @@ sup {
   color: darkorchid;
 }
 
+.logo {
+  height: 4rem;
+}
+
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
@@ -280,6 +259,7 @@ pre {
   overflow: auto;
   font-size: 0.875em;
 }
+
 pre code {
   font-size: inherit;
   color: inherit;
@@ -291,6 +271,7 @@ code {
   color: #d63384;
   word-wrap: break-word;
 }
+
 a > code {
   color: inherit;
 }
@@ -425,6 +406,7 @@ legend {
   font-size: calc(1.275rem + 0.3vw);
   line-height: inherit;
 }
+
 @media (min-width: 1200px) {
   legend {
     font-size: 1.5rem;
@@ -453,14 +435,6 @@ legend + * {
   -webkit-appearance: textfield;
 }
 
-/* rtl:raw:
-[type="tel"],
-[type="url"],
-[type="email"],
-[type="number"] {
-  direction: ltr;
-}
-*/
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -661,26 +635,31 @@ progress {
     max-width: 540px;
   }
 }
+
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
     max-width: 720px;
   }
 }
+
 @media (min-width: 992px) {
   .container-lg, .container-md, .container-sm, .container {
     max-width: 960px;
   }
 }
+
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1140px;
   }
 }
+
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1320px;
   }
 }
+
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
@@ -4122,7 +4101,7 @@ textarea.form-control-lg {
 .navbar-toggler-icon {
   display: inline-block;
   width: 1.5em;
-  height: 1.5em;
+  height: 2.5em;
   vertical-align: middle;
   background-repeat: no-repeat;
   background-position: center;
@@ -6542,7 +6521,6 @@ textarea.form-control-lg {
   right: 0;
   left: 0;
   z-index: 1030;
-  height: 5rem;
 }
 
 .fixed-bottom {
