--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
-  --bs-orange: #bd5d38;
+  --bs-orange: blueviolet;
   --bs-yellow: #ffc107;
   --bs-green: #198754;
   --bs-teal: #20c997;
@@ -23,7 +23,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #bd5d38;
+  --bs-primary: blueviolet;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -227,7 +227,6 @@ sup {
 
 .link-email {
   color: mediumaquamarine;
-  text-decoration: underline;
 }
 .link-email:hover {
   color: darkorchid;
@@ -2498,8 +2497,8 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
 }
 .form-check-input:checked {
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2508,8 +2507,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2586,7 +2585,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #bd5d38;
+  background-color: blueviolet;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2615,7 +2614,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #bd5d38;
+  background-color: blueviolet;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3023,8 +3022,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
 .btn-primary:hover {
   color: #000;
@@ -3047,8 +3046,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #000;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
 
 .btn-secondary {
@@ -3262,27 +3261,26 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #bd5d38;
-  border-color: #bd5d38;
+  color: blueviolet;
+  border-color: blueviolet;
 }
 .btn-outline-primary:hover {
   color: #000;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
-  color: #000;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  color: white;
+  background-color: blueviolet;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(178, 56, 189, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #bd5d38;
+  color:  violet;
   background-color: transparent;
 }
 
@@ -3463,11 +3461,10 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #bd5d38;
-  text-decoration: underline;
+  color: blueviolet;
 }
 .btn-link:hover {
-  color: #974a2d;
+  color: violet;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3772,7 +3769,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #bd5d38;
+  background-color: blueviolet;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3813,7 +3810,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #bd5d38;
+  background-color: blueviolet;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3935,7 +3932,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #bd5d38;
+  color: blueviolet;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3992,7 +3989,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #bd5d38;
+  background-color: blueviolet;
 }
 
 .nav-fill > .nav-link,
@@ -4796,7 +4793,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #bd5d38;
+  color: blueviolet;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4827,8 +4824,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5024,7 +5021,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #bd5d38;
+  background-color: blueviolet;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5107,8 +5104,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: blueviolet;
+  border-color: blueviolet;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6427,7 +6424,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #bd5d38;
+  color: blueviolet;
 }
 .link-primary:hover, .link-primary:focus {
   color: #ca7d60;
@@ -6764,6 +6761,16 @@ textarea.form-control-lg {
 
 .position-relative {
   position: relative !important;
+  padding-bottom: 0;  
+}
+
+.portfolio-btn {
+  background-color: dodgerblue;
+  height: 30px;
+}
+
+.p-expirience {
+  margin-right: 3rem;
 }
 
 .position-absolute {
@@ -6880,7 +6887,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #bd5d38 !important;
+  border-color: blueviolet !important;
 }
 
 .border-secondary {
@@ -7509,7 +7516,7 @@ textarea.form-control-lg {
 }
 
 .pt-5 {
-  padding-top: 3rem !important;
+  padding-top: 0 !important;
 }
 
 .pe-0 {
@@ -7915,7 +7922,7 @@ textarea.form-control-lg {
 }
 
 .rounded {
-  border-radius: 0.25rem !important;
+  border-radius: 0 !important;
 }
 
 .rounded-0 {
@@ -11581,13 +11588,15 @@ h4 {
 
 section.resume-section {
   display: flex;
-  align-items: center;
+  align-items: start;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 5rem;
+  padding-top: 6rem;
   padding-bottom: 5rem;
   max-width: 75rem;
+  font-family: Muli;
 }
+
 section.resume-section .resume-section-content {
   width: 100%;
 }
@@ -11601,7 +11610,90 @@ section.resume-section .resume-section-content {
   section.resume-section {
     padding-left: 3rem;
     padding-right: 3rem;
-    padding-top: 5rem;
+    padding-top: 3rem;
     padding-bottom: 5rem;
   }
+}
+
+.at-about-fab {
+  z-index: 999999;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.at-about-fab:before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: -58px;
+  width: 58px;
+  height: 48px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.at-about-fab:hover {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+.at-about-fab:hover .at-about-fab__meta {
+  opacity: 1;
+}
+.at-about-fab__thumbnail {
+  position: absolute;
+  top: 50%;
+  left: -58px;
+  border-radius:100%;
+  background: #fcfaf7;
+  width: 48px;
+  height: 48px;
+  padding: 4px;
+  box-sizing: border-box;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  overflow: hidden;
+  cursor: pointer;
+}
+.at-about-fab__thumbnail img {
+  display: block;
+  width: 100%;
+  border-radius: 100%;
+}
+.at-about-fab__meta {
+  opacity: 0;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+.at-about-fab__meta h2,
+.at-about-fab__meta p {
+  margin: 0;
+  padding: 0;
+}
+.at-about-fab__meta h2 {
+  color: #CCCCCC;
+  font-size: 14px;
+  font-weight: 600;
+}
+.at-about-fab__meta p {
+  color: #CCCCCC;
+  font-size: 12px;
+  font-weight: 400;
+}
+.at-about-fab__meta a {
+  color: inherit;
+  font-weight: 400;
+  text-decoration: none;
 }
